fix to make current active nav bar element visible, with a different color and in the DOM

--- a/src/css/custom.module.scss
+++ b/src/css/custom.module.scss
@@ -18,6 +18,7 @@
     --ifm-code-font-size: 95%;
     --docusaurus-highlighted-code-line-bg: #0000001a;
     --ifm-navbar-link-color: var(--ifm-color-darkest);
+    --ifm-navbar-link-active-color:: var(--ifm-color-primary);
     --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
     --ifm-footer-background-color: #333030;
     --ifm-footer-color: var(--ifm-color-primary-lightest);
@@ -38,6 +39,7 @@
   --ifm-background-color: #333030;
   --ifm-button-background-color: var(--ifm-color-primary);
   --ifm-navbar-link-color: var(--ifm-color-primary-darker);
+  --ifm-navbar-link-active-color:: var(--ifm-color-primary);
   --ifm-footer-color: var(--ifm-color-primary-darker);
   --ifm-footer-link-color: var(--ifm-color-primary-darkest) !important;
 }
