--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -28,3 +28,7 @@
   color: var(--ifm-color-primary-lightest);
 
 }
+
+.navbar a:active {
+  color: var(--ifm-navbar-link-active-color);
+}
